more deactivation logic for groups and refactoring of groups, and how they are displayed in frontend.